--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django==4.2.17
 django-cors-headers==4.4.0
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.3.1
-Pillow==11.0.0
+Pillow==11.0.0 #pip instal -pre Pillow
 pytz==2025.2
 tzdata==2025.2
 sqlparse==0.4.4
